service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-app-demo
spec:
  type: NodePort
  selector:
    app: demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 6001
      nodePort: 31000
